worked on media queries

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="container">
             <nav>
                 <ul class="side-nav">
-                    <li> Contact me </li>
-                    <li> Portfolio </li>
-                    <li> About me </li>
                     <li> Home </li>
+                    <li> About me </li>
+                    <li> Portfolio </li>
+                    <li> Contact me </li>
                 </ul>
             </nav>
 
@@ -23,7 +23,7 @@
                 <div class="introduction">
                     <p class="greet"> Hello </p>
                     <p class="name"> I'm Peter </p>
-                    <p class="job"> I'm a Frontend Developer </p>
+                    <p class="job"> I am a Frontend Developer </p>
                 </div>
                 <div class="role">
                     <p> My name is Peter Okerulu, I am a freelance frontend developer. <br>
@@ -33,10 +33,11 @@
                 <div class="contact">
                     <p> Find me on: </p>
                     <span>
-                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://github.com/Oduchep"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://stackoverflow.com/users/13959857/oduchep"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/JuanPedro_Mario"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/peter-okerulu-624572190/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.freecodecamp.org/juanpedro_mario"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a>
                     </span>
                 </div>
                 <div class="section2">
