--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="container">
             <nav>
                 <ul class="side-nav">
-                    <li> Home </li>
-                    <li> About me </li>
-                    <li> Portfolio </li>
-                    <li> Contact me </li>
+                    <li> <a href="">Home</a> </li>
+                    <li><a href=""> About me </a></li>
+                    <li><a href=""> Portfolio </a></li>
+                    <li><a href=""> Contact me </a></li>
                 </ul>
             </nav>
 
