--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
         <header>
             <nav>
                 <ul class="nav-bar">
-                    <li> <a href="">Home</a> </li>
-                    <li><a href=""> About me </a></li>
-                    <li><a href=""> Skills </a></li>
-                    <li><a href=""> Contact me </a></li>
+                    <li> <a href="#home">Home</a> </li>
+                    <li><a href="#skills"> Skills </a></li>
+                    <li><a href="#projects"> Projects </a></li>
+                    <li><a href="#contacts"> Contact me </a></li>
                 </ul>
             </nav>
         </header>
 
         <div class="container">
-            <section class="about">
+            <section class="about" id="home">
+                <div class="image">
+                    <img src="./passport.png" alt="my passport">
+                </div>
                 <div class="introduction">
                     <p class="greet"> Hello, </p>
                     <p class="name"> I'm Peter </p>
                     <p class="job"> I am a Frontend Developer </p>
-                </div>
-                <div class="role">
-                    <p> My name is Peter Okerulu, I am a freelance frontend developer. <br>
-                        I absolutely love my job and I am pretty good at it.
-                    </p>
+                    <p class="role"> My name is Peter Okerulu, I am a freelance frontend developer. <br>
+                        I absolutely love my job and I am pretty good at it. </p>
                 </div>
             </section>
 
-            <section class="skills">
+            <section class="skills" id="skills">
                 <h2> Skills </h2>
                 <div class="skill-cards">
                     <div class="html">
@@ -64,7 +64,7 @@
                 </div>
             </section>
 
-            <section class="my-contacts">
+            <section class="my-contacts" id="contacts">
                 <h2> Contact me </h2>
                 <p class="reach-out"> I would really love to hear from you.
                     Reach out to me and I will get back to you in less that 24hrs. </p>
